# Dalva

./: .gitignore  404.html  AGENTS.md  CLAUDE.md  Makefile  README.md  hatch_build.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.agents/skills/pytest-skill/: SKILL.md
.claude/skills/trackai/: SKILL.md
.github/: dependabot.yml
.github/workflows/: docs.yml  frontend-build.yml  pypi-publish.yml  ruff.yml  tests.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/api_documentation/dalva_module/: index.html
0.1/api_documentation/run_class/: index.html
0.1/api_documentation/table_class/: index.html
0.1/architecture/: index.html
0.1/getting_started/autoresearch/: index.html
0.1/getting_started/cli_usage/: index.html
0.1/getting_started/metrics/: index.html
0.1/getting_started/python_sdk/: index.html
0.1/getting_started/quickstart/: index.html
0.1/getting_started/remote_training/: index.html
0.1/getting_started/runs/: index.html
0.1/getting_started/tables/: index.html
0.1/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2/api_documentation/dalva_module/: index.html
0.2/api_documentation/run_class/: index.html
0.2/api_documentation/table_class/: index.html
0.2/architecture/: index.html
0.2/getting_started/autoresearch/: index.html
0.2/getting_started/cli_usage/: index.html
0.2/getting_started/metrics/: index.html
0.2/getting_started/python_sdk/: index.html
0.2/getting_started/quickstart/: index.html
0.2/getting_started/remote_training/: index.html
0.2/getting_started/runs/: index.html
0.2/getting_started/tables/: index.html
0.2/search/: search_index.json
api_documentation/dalva_module/: index.html
api_documentation/init/: index.html
api_documentation/run_class/: index.html
api_documentation/table_class/: index.html
api_documentation/table_init/: index.html
architecture/: index.html
backend/: README.md
backend/examples/: README.md  categorical_demo.py  crash_recovery.py  fork_run.py  fork_run_full.py  linked_table.py  nested_metrics_and_config.py  resume_run.py  simple_experiment.py
backend/src/dalva/: __init__.py  run.py  (+4 more)
backend/tests/: conftest.py  smoke_test.py  test_api.py  test_config.py  test_get.py  test_logger.py  test_remote_tracking.py  test_routes_metrics.py  test_routes_projects.py  test_routes_runs.py  test_routes_tables.py  test_worker.py
docs/: architecture.md  index.md
docs/.overrides/: main.html
docs/api_documentation/: config.md  dalva_module.md  run_class.md  table_class.md  table_init.md
docs/getting_started/: autoresearch.md  cli_usage.md  context_manager.md  installation.md  logging_metrics.md  metrics.md  metrics_and_types.md  migration_from_neptune.md  python_sdk.md  quickstart.md  remote_training.md  rest_api.md  resuming_runs.md  runs.md  s3_storage.md  system_metrics.md  tables.md  web_interface.md
docs/javascripts/: external-links.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
getting_started/autoresearch/: index.html
getting_started/cli_usage/: index.html
getting_started/metrics/: index.html
getting_started/metrics_and_types/: index.html
getting_started/python_sdk/: index.html
getting_started/quickstart/: index.html
getting_started/remote_training/: index.html
getting_started/runs/: index.html
getting_started/tables/: index.html
search/: search_index.json
tests/: smoke_test.py
(+137 files in other folders)
