[project]
name = "trackai"
version = "0.1.0"
description = "Lightweight experiment tracker for deep learning"
readme = "README.md"
authors = [
    { name = "Túlio Souza", email = "tulio.souza99@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=18.0.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "duckdb>=1.0.0",
    "duckdb-engine>=0.13.0",
    "click>=8.0.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.15",
    "mkdocstrings-python>=1.16.12",
]

[project.scripts]
trackai = "trackai.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/trackai"]

# Include build-generated static files
artifacts = [
    "backend/src/trackai/static/*",
    "backend/src/trackai/static/**/*",
]

# Source distribution configuration
[tool.hatch.build.targets.sdist]
# Force include static files even though they're in .gitignore
# This ensures they're available when building wheel from sdist
[tool.hatch.build.targets.sdist.force-include]
"static" = "static"

# Register custom build hook
[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
